@@ -4,7 +4,7 @@
 # DO NOT EDIT UNLESS YOU ARE SURE THAT YOU KNOW WHAT YOU ARE DOING
 #
 
-require File.dirname(__FILE__) + '/client_types'
+require 'client_types'
 
     module Hypertable
       module ThriftGen
