@@ -4,8 +4,8 @@
 # DO NOT EDIT UNLESS YOU ARE SURE THAT YOU KNOW WHAT YOU ARE DOING
 #
 
-#require 'client_types'
-require File.dirname(__FILE__) + '/client_types'
+require 'client_types'
+
 
 module Hypertable
   module ThriftGen
@@ -35,6 +35,29 @@ module Hypertable
           FIELDS = {
             RESULTS => {:type => ::Thrift::Types::LIST, :name => 'results', :element => {:type => ::Thrift::Types::STRING}, :optional => true},
             CELLS => {:type => ::Thrift::Types::LIST, :name => 'cells', :element => {:type => ::Thrift::Types::STRUCT, :class => Hypertable::ThriftGen::Cell}, :optional => true},
+            SCANNER => {:type => ::Thrift::Types::I64, :name => 'scanner', :optional => true},
+            MUTATOR => {:type => ::Thrift::Types::I64, :name => 'mutator', :optional => true}
+          }
+
+          def struct_fields; FIELDS; end
+
+          def validate
+          end
+
+        end
+
+        # Same as HqlResult except with cell as array
+        class HqlResult2
+          include ::Thrift::Struct
+          RESULTS = 1
+          CELLS = 2
+          SCANNER = 3
+          MUTATOR = 4
+
+          ::Thrift::Struct.field_accessor self, :results, :cells, :scanner, :mutator
+          FIELDS = {
+            RESULTS => {:type => ::Thrift::Types::LIST, :name => 'results', :element => {:type => ::Thrift::Types::STRING}, :optional => true},
+            CELLS => {:type => ::Thrift::Types::LIST, :name => 'cells', :element => {:type => ::Thrift::Types::LIST, :element => {:type => ::Thrift::Types::STRING}}, :optional => true},
             SCANNER => {:type => ::Thrift::Types::I64, :name => 'scanner', :optional => true},
             MUTATOR => {:type => ::Thrift::Types::I64, :name => 'mutator', :optional => true}
           }
